fix the overlapping svg and noise issue

--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@
     --focus-color: rgb(203, 171, 235);
 
     color: white;
-    background: var(--theme-color);
-    background: linear-gradient(0deg, rgba(47,66,65,1) 31%, rgba(12,12,13,1) 100%);
+    /* background: var(--theme-color); */
+    /* background: linear-gradient(0deg, rgba(47,66,65,1) 31%, rgba(12,12,13,1) 100%); */
     line-height: 1.5;
 
     box-sizing: border-box;
@@ -129,6 +129,7 @@ div .header {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 2;
 }
 
 
@@ -277,6 +278,7 @@ button:hover {
 
   #tv-svg {
     z-index: 3;
+    position: relative;
   }
 
   #tv-base {
@@ -287,10 +289,10 @@ button:hover {
     fill: rgb(85, 96, 95);
   }
 
-  #inner-tv {
+  /* #inner-tv {
     fill: black;
     z-index: 1 !important;
-  }
+  } */
 
   #tv-stand {
     fill: rgb(54, 45, 33);
@@ -298,13 +300,14 @@ button:hover {
 
   #tv-button {
     fill: red;
+    cursor: pointer;
   }
 
   #tv-button:hover {
     stroke: #dda6b7;
   }
 
-  .noise-overlay {
+  /* .noise-overlay {
     position: absolute;
     left: 14%;
     top: 10%;  
@@ -312,7 +315,7 @@ button:hover {
     width: 72%;   
     pointer-events: none; 
     
-    /* Noise effect */
+    /* Noise effect
     background: 
         repeating-radial-gradient(#000 0 0.0001%,#fff 0 0.0002%) 50% 0/2500px 2500px,
         repeating-conic-gradient(#000 0 0.0001%,#fff 0 0.0002%) 60% 60%/2500px 2500px;
@@ -320,13 +323,54 @@ button:hover {
     background-blend-mode: difference; 
     animation: scramble .2s infinite alternate; 
     opacity: 0.6; 
+} */
 
-    /* -webkit-mask: url(#tv-screen-clip);
-    mask: url(#tv-screen-clip); */
+.noise-container {
+    position: absolute;
+    transform-origin: 0 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    overflow: hidden;
 }
+
+.noise-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;  
+    height: 100%;  
+    width: 100%;   
+    pointer-events: none; 
+    
+    /* Noise effect */
+    background: 
+        repeating-radial-gradient(#000 0 0.0003%,#55cb72 0 0.3%) 50% 0/1200px 500px,
+        repeating-conic-gradient(#000 0 0.0001%,#48c048 0 0.01%) 20% 60%/1000px 1000px;
+
+    background-blend-mode: difference; 
+    animation: scramble .2s infinite alternate; 
+    opacity: 0.6; 
+}
+
 
 @keyframes scramble {
     100% { background-position: 50% 0, 60% 50%; }
+}
+
+.green-noise {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    
+    background: 
+    repeating-radial-gradient(hsl(177, 30%, 45%) 0 0.0001%, hsl(171, 100%, 10%) 0 0.002%) 5% 0/500px 1000px,
+    repeating-conic-gradient(hsl(177, 30%, 40%) 0 0.0001%, hsl(171, 100%, 10%) 0 0.00012%) 10% 60%/2500px 2500px;
+    
+    background-blend-mode: difference;
+    animation: scramble 1.2s infinite alternate; 
+    opacity: 0.5;
 }
 
 .invisible {
@@ -366,7 +410,7 @@ button:hover {
   height: 110%;
   filter: contrast(170%) brightness(1000%);
   background: 
-  radial-gradient(circle at 50% 1%, rgba(36,65,63,1), rgba(0,0,0,0.71)),
+  radial-gradient(circle at 50% 1%, #24413f, rgba(0,0,0,0.71)),
   url("data:image/svg+xml,%3Csvg viewBox='0 0 800 800' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2.69' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
 
